Completed RV fitting code, tested against simulated data with noise.
git-svn-id: http://192.168.1.75/svn/orbit-fit@7 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
 add_subdirectory(src)
+add_subdirectory(lib)
