Finished RV fitting routines, pulled out multinest starting routines.
git-svn-id: http://192.168.1.75/svn/orbit-fit@16 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@ SET_TARGET_PROPERTIES(gendata PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(gendata orbit textio)
 
 file(GLOB FIT_RV_SOURCE fit_rv/*.cpp)
-add_executable(fitrv common.cpp ${FIT_RV_SOURCE})
+add_executable(fitrv common.cpp multinest_inf.cpp ${FIT_RV_SOURCE})
 SET_TARGET_PROPERTIES(fitrv PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitrv orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
