Added common parsing routine for command-line overrides.  Modified fitrv, fitast to use it.
git-svn-id: http://192.168.1.75/svn/orbit-fit@22 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,8 @@ cmake_minimum_required(VERSION 2.8)
 # so we'll just keep with the fortran libraries.
 project (orbit_fit CXX Fortran)
 
-#set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_BUILD_TYPE Debug)
-
-if(${CMAKE_Fortran_COMPILER_ID} EQUAL "Intel")
-    set(USING_INTEL True)
-endif()
+set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Debug)
 
 set(MPI_COMPILER mpif90)
 find_package(MPI)
@@ -51,6 +47,3 @@ add_executable(fitast common.cpp multinest_inf.cpp ${FIT_AST_SOURCE})
 SET_TARGET_PROPERTIES(fitast PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitast orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
-#SET_TARGET_PROPERTIES(fit_rv PROPERTIES LINKER_LANGUAGE Fortran)
-
-#target_link_libraries(fit_rv ${LIBS})
