--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,19 +7,36 @@ project (orbit_fit CXX Fortran)
 set(CMAKE_BUILD_TYPE Release)
 #set(CMAKE_BUILD_TYPE Debug)
 
-set(MPI_COMPILER mpicxx)
-find_package(MPI)
-if(MPI_FOUND)
-    set(CMAKE_CXX_COMPILER ${MPI_COMPILER})
-endif(MPI_FOUND)
+#FIND_PACKAGE(MPI REQUIRED)
+#INCLUDE(CMakeForceCompiler)
+#CMAKE_FORCE_CXX_COMPILER(mpicxx "MPI C++ Compiler")
+#CMAKE_FORCE_Fortran_COMPILER(mpif90 "MPI Fortran Compiler")
 
 set(MPI_COMPILER mpif90)
 find_package(MPI)
 if(MPI_FOUND)
     include_directories(${MPI_INCLUDE_PATH})
     set(CMAKE_Fortran_COMPILER ${MPI_COMPILER})
-    set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} "-DMPI")
+    set(CMAKE_CXX_COMPILER "mpicxx")
+    message(STATUS "NOTE: Set Fortran Compiler to " ${CMAKE_Fortran_COMPILER})
+    message(STATUS "NOTE: Set CXX Compiler to " ${CMAKE_CXX_COMPILER})
+    
+    set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} " -O3 -fPIC -DMPI -ffree-line-length-none")
+    include_directories(${MPI_INCLUDE_PATH})
 endif(MPI_FOUND)
+
+#set(MPI_COMPILER mpic++)
+#set(MPI_LIB "MPI_LIB-NOTFOUND")
+#set(MPI_LIBRARY "MPI_LIB-NOTFOUND")
+#set(MPI_FOUND)
+#find_package(MPI)
+#if(MPI_FOUND)
+#    set(CMAKE_CXX_COMPILER ${MPI_COMPILER})
+#    message(STATUS "NOTE: " ${MPI_COMPILER})
+#    message(STATUS "NOTE: Set CXX Compiler to " ${CMAKE_CXX_COMPILER})
+#    include_directories(${MPI_INCLUDE_PATH})
+#endif(MPI_FOUND)
+
 
 
 
@@ -45,12 +62,12 @@ add_executable(gendata common.cpp ${GEN_DATA_SOURCE})
 SET_TARGET_PROPERTIES(gendata PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(gendata orbit textio)
 
-file(GLOB FIT_RV_SOURCE fit_rv/*.cpp)
+file(GLOB FIT_RV_SOURCE ./fitrv*.cpp)
 add_executable(fitrv common.cpp multinest_inf.cpp ${FIT_RV_SOURCE})
 SET_TARGET_PROPERTIES(fitrv PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitrv orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
-file(GLOB FIT_AST_SOURCE fit_astrometry/*.cpp)
+file(GLOB FIT_AST_SOURCE ./fitast*.cpp)
 add_executable(fitast common.cpp multinest_inf.cpp ${FIT_AST_SOURCE})
 SET_TARGET_PROPERTIES(fitast PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitast orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
