Finished fitboth, refactoring fitast and fitrv.  Also improved the data generator, permitting orbital parameters to be specified via. command line or generated randomly.
git-svn-id: http://192.168.1.75/svn/orbit-fit@37 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -72,3 +72,8 @@ add_executable(fitast common.cpp multinest_inf.cpp ${FIT_AST_SOURCE})
 SET_TARGET_PROPERTIES(fitast PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitast orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
+file(GLOB FIT_BOTH_SOURCE ./fitboth*.cpp)
+add_executable(fitboth common.cpp multinest_inf.cpp fitast_common.cpp fitrv_common.cpp ${FIT_BOTH_SOURCE})
+SET_TARGET_PROPERTIES(fitboth PROPERTIES LINKER_LANGUAGE Fortran)
+target_link_libraries(fitboth orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
+
