Refactored fitast, move read_data to read_data.cpp.  Updated fitast and fitboth.
git-svn-id: http://192.168.1.75/svn/orbit-fit@58 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,17 +63,17 @@ SET_TARGET_PROPERTIES(gendata PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(gendata orbit textio)
 
 file(GLOB FIT_RV_SOURCE ./fitrv*.cpp)
-add_executable(fitrv common.cpp multinest_inf.cpp ${FIT_RV_SOURCE})
+add_executable(fitrv read_data.cpp common.cpp multinest_inf.cpp ${FIT_RV_SOURCE})
 SET_TARGET_PROPERTIES(fitrv PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitrv orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
 file(GLOB FIT_AST_SOURCE ./fitast*.cpp)
-add_executable(fitast common.cpp multinest_inf.cpp ${FIT_AST_SOURCE})
+add_executable(fitast read_data.cpp common.cpp multinest_inf.cpp ${FIT_AST_SOURCE})
 SET_TARGET_PROPERTIES(fitast PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitast orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
 file(GLOB FIT_BOTH_SOURCE ./fitboth*.cpp)
-add_executable(fitboth common.cpp multinest_inf.cpp fitast_common.cpp fitrv_common.cpp ${FIT_BOTH_SOURCE})
+add_executable(fitboth read_data.cpp common.cpp multinest_inf.cpp fitast_common.cpp fitrv_common.cpp ${FIT_BOTH_SOURCE})
 SET_TARGET_PROPERTIES(fitboth PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitboth orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
