Completed genplotdata for fitrv and fitast, still need it for fitboth.
git-svn-id: http://192.168.1.75/svn/orbit-fit@60 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,3 +77,8 @@ add_executable(fitboth read_data.cpp common.cpp multinest_inf.cpp fitast_common.
 SET_TARGET_PROPERTIES(fitboth PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitboth orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
+
+file(GLOB FIT_BOTH_SOURCE ./genplotdata*.cpp)
+add_executable(genplotdata read_data.cpp ${FIT_BOTH_SOURCE})
+SET_TARGET_PROPERTIES(genplotdata PROPERTIES LINKER_LANGUAGE CXX)
+target_link_libraries(genplotdata orbit textio)
