Changes to CMake files for the cluster.
git-svn-id: http://192.168.1.75/svn/orbit-fit@62 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/lib/multinest/CMakeLists.txt
+++ b/lib/multinest/CMakeLists.txt
@@ -15,8 +15,8 @@ if(MPI_FOUND)
     set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS})
 endif(MPI_FOUND)
 
-find_package(LAPACK REQUIRED)
-include_directories(${LAPACK_INCLUDE_DIRS})
+#find_package(LAPACK REQUIRED)
+#include_directories(${LAPACK_INCLUDE_DIRS})
 
 set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} " -O3 -fPIC -DMPI -ffree-line-length-none")
 add_library(multinest ${MULTINEST_SOURCE})
