Small update to CMakeLists.txt
git-svn-id: http://192.168.1.75/svn/orbit-fit@63 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,10 +17,12 @@ find_package(MPI)
 if(MPI_FOUND)
     include_directories(${MPI_INCLUDE_PATH})
     set(CMAKE_Fortran_COMPILER ${MPI_COMPILER})
+    set(CMAKE_CXX_COMPILER_OLD ${CMAKE_CXX_COMPILER})
+    set(CMAKE_CXX_FLAGS_OLD ${CMAKE_CXX_FLAGS})
     set(CMAKE_CXX_COMPILER "mpicxx")
     message(STATUS "NOTE: Set Fortran Compiler to " ${CMAKE_Fortran_COMPILER})
     message(STATUS "NOTE: Set CXX Compiler to " ${CMAKE_CXX_COMPILER})
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -O3 -DMPI")
+    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -O3 -DMPI -nofor_main")
     set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} " -O3 -fPIC -DMPI -ffree-line-length-none -nofor_main")
     include_directories(${MPI_INCLUDE_PATH})
 endif(MPI_FOUND)
@@ -63,6 +65,10 @@ add_executable(fitboth read_data.cpp common.cpp multinest_inf.cpp fitast_common.
 SET_TARGET_PROPERTIES(fitboth PROPERTIES LINKER_LANGUAGE Fortran)
 target_link_libraries(fitboth orbit textio multinest ${MPI_LIBRARY} ${LAPACK_LIBRARIES})
 
+if(MPI_FOUND)
+    set(CMAKE_CXX_COMPILER ${CMAKE_CXX_COMPILER_OLD})
+    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_OLD})
+endif(MPI_FOUND)
 
 file(GLOB FIT_BOTH_SOURCE ./genplotdata*.cpp)
 add_executable(genplotdata read_data.cpp ${FIT_BOTH_SOURCE})
