--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required(VERSION 2.8)
 # so we'll just keep with the fortran libraries.
 project (orbit_fit CXX Fortran)
 
-set(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 
 #FIND_PACKAGE(MPI REQUIRED)
 #INCLUDE(CMakeForceCompiler)
