Modifications to RV routines.
git-svn-id: http://192.168.1.75/svn/orbit-fit@77 b9008261-a95d-470b-9c38-38f0b39c50e0

--- a/lib/multinest/CMakeLists.txt
+++ b/lib/multinest/CMakeLists.txt
@@ -21,4 +21,4 @@ endif(MPI_FOUND)
 set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} " -O3 -fPIC -DMPI -ffree-line-length-none")
 add_library(multinest ${MULTINEST_SOURCE})
 SET_TARGET_PROPERTIES(multinest PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(multinest ${LAPACK_LIBRARY} ${MPI_LIBRARY})
+target_link_libraries(multinest ${LAPACK_LIBRARIES} ${MPI_LIBRARY})
